--- a/Apollo/Apollo.vcxproj
+++ b/Apollo/Apollo.vcxproj
@@ -270,6 +270,7 @@ xcopy $(OutDir)$(ProjectName).pdb $(SolutionDir)bin\ /Y</Command>
     <ClCompile Include="DX11\RenderStateDX11.cpp" />
     <ClCompile Include="DX11\RenderTargetDX11.cpp" />
     <ClCompile Include="DX11\ShaderDX11.cpp" />
+    <ClCompile Include="DX11\ShaderDX11Factory.cpp" />
     <ClCompile Include="DX11\ShaderParameterDX11.cpp" />
     <ClCompile Include="DX11\StructuredBufferDX11.cpp" />
     <ClCompile Include="DX11\SubMeshDX11.cpp" />
