--- a/Apollo/Apollo.vcxproj
+++ b/Apollo/Apollo.vcxproj
@@ -181,6 +181,7 @@ xcopy $(OutDir)$(ProjectName).pdb $(SolutionDir)bin\ /Y</Command>
     <ClInclude Include="DX11\BufferManagerDX11.h" />
     <ClInclude Include="DX11\ConstantBufferDX11.h" />
     <ClInclude Include="DX11\GeometryDX11.h" />
+    <ClInclude Include="DX11\HLSLDX11Factory.h" />
     <ClInclude Include="DX11\HLSLDX11Resource.h" />
     <ClInclude Include="DX11\imgui_impl_dx11.h" />
     <ClInclude Include="DX11\IResourceDX11.h" />
@@ -192,7 +193,6 @@ xcopy $(OutDir)$(ProjectName).pdb $(SolutionDir)bin\ /Y</Command>
     <ClInclude Include="DX11\RenderStateDX11.h" />
     <ClInclude Include="DX11\RenderTargetDX11.h" />
     <ClInclude Include="DX11\ShaderDX11.h" />
-    <ClInclude Include="DX11\ShaderDX11Factory.h" />
     <ClInclude Include="DX11\ShaderParameterDX11.h" />
     <ClInclude Include="DX11\StructuredBufferDX11.h" />
     <ClInclude Include="DX11\SubMeshDX11.h" />
@@ -203,6 +203,7 @@ xcopy $(OutDir)$(ProjectName).pdb $(SolutionDir)bin\ /Y</Command>
     <ClInclude Include="Graphics\AABB.h" />
     <ClInclude Include="Graphics\Camera.h" />
     <ClInclude Include="Graphics\ClearRenderTargetPass.h" />
+    <ClInclude Include="Graphics\DeferredRenderLightPass.h" />
     <ClInclude Include="Graphics\Frustum.h" />
     <ClInclude Include="Graphics\IRenderable.h" />
     <ClInclude Include="Graphics\RenderPass.h" />
@@ -262,6 +263,7 @@ xcopy $(OutDir)$(ProjectName).pdb $(SolutionDir)bin\ /Y</Command>
     <ClCompile Include="DX11\ClearRenderTargetPass.cpp" />
     <ClCompile Include="DX11\ConstantBufferDX11.cpp" />
     <ClCompile Include="DX11\GeometryDX11.cpp" />
+    <ClCompile Include="DX11\HLSLDX11Factory.cpp" />
     <ClCompile Include="DX11\HLSLDX11Resource.cpp" />
     <ClCompile Include="DX11\imgui_impl_dx11.cpp" />
     <ClCompile Include="DX11\MaterialDX11.cpp" />
@@ -272,7 +274,6 @@ xcopy $(OutDir)$(ProjectName).pdb $(SolutionDir)bin\ /Y</Command>
     <ClCompile Include="DX11\RenderStateDX11.cpp" />
     <ClCompile Include="DX11\RenderTargetDX11.cpp" />
     <ClCompile Include="DX11\ShaderDX11.cpp" />
-    <ClCompile Include="DX11\ShaderDX11Factory.cpp" />
     <ClCompile Include="DX11\ShaderParameterDX11.cpp" />
     <ClCompile Include="DX11\StructuredBufferDX11.cpp" />
     <ClCompile Include="DX11\SubMeshDX11.cpp" />
