修改c++ shader编译错误

--- a/Apollo/Apollo.vcxproj.filters
+++ b/Apollo/Apollo.vcxproj.filters
@@ -601,6 +601,8 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Environment\Atmosphere\Functions.hlsl" />
+    <None Include="Environment\Atmosphere\Functions.hlsl">
+      <Filter>Environment\Atmosphere</Filter>
+    </None>
   </ItemGroup>
 </Project>
